--- a/src/Components/Nav.module.css
+++ b/src/Components/Nav.module.css
@@ -18,23 +18,31 @@
 
 .nav {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
     position: absolute;
     width: 100%;
     background-color: rgba(35, 79, 111, 0.5);
   }
-  
-  .navDivLeft {
-    margin-left: 3%;
+
+  .navDivLeft a {
+    text-decoration: none;
   }
 
   .initials {
     border: 3px solid white;
     color: white;
     border-radius: 4px;
-    padding: .75rem;
+    padding: .3rem;
     font-size: 2.5vw;
     font-weight: 600;
+    height: 4vw;
+    width: 4vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    margin: 1vw;
   }
 
   .initials:hover {
@@ -42,40 +50,46 @@
     cursor: pointer;
   }
 
-  .navDivRight {
+  .navDivCenter {
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 75vw;
-    margin-left: 10%;
   }
 
   .navTabs {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     font-size: 2.2vw;
     align-items: center;
     width: 100%;
-    padding-right: 5vw;
   }
   
   .navTabs a {
     text-decoration: none;
     list-style: none;
     color: white;
-    margin: 17px;
-    padding: 0px 0px 3px 2px;
+    margin: 0px 17px;
+    padding-bottom: 2px;
     border-bottom: 2px solid white;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 20%;
   }
 
   .navTabs a:hover {
     border: 2px solid white;
     border-radius: 4px;
     margin: 15px;
+    padding-bottom: 4px;
+    padding-top: 4px;
+    margin-top: 11px;
+  }
+
+  .navTabs a li {
+    width: max-content;
+    margin-right: 1.5vw;
+    margin-left: 10px;
   }
 
   .dots {
@@ -85,6 +99,14 @@
     border-radius: 4px;
     margin-right: 10px;
     background-color: white;
+  }
+
+  .navDivRight p {
+    font-size: 1.8vw;
+  }
+
+  .navDivRight a {
+    text-decoration: none;
   }
 
 /* DANNY REGAN FRONT END SECTION */
@@ -110,7 +132,7 @@
 .frontEnd {
   font-size: 70%;
   font-weight: 100;
-  line-height: 10%;
+  margin-top: 2vw;
 }
 
 .frontEnd span {
@@ -124,7 +146,7 @@
   width: 15vw;
   color: white;
   background-color: rgba(35, 79, 111, 0.5);
-  padding: 3vw;
+  padding: 2vw;
   border: 3px solid white;
   border-radius: 4px;
   display: flex;
@@ -153,6 +175,7 @@ button {
   border-radius: 4px;
   width: 100%;
   font-size: .85vw;
+  padding: .3vw;
 }
 
 button:hover {
