--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -7,22 +8,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-/* .nav {
-  display: flex;
-  justify-content: space-between;
-  margin: 15px 30px;
+* {
+  margin: 0;
+  padding: 0;
+  max-width: 100%;
 }
-
-.navTabs {
-  display: flex;
-  justify-content: space-between;
-}
-
-.navTabs a {
-  text-decoration: none;
-  list-style: none;
-}
-
-.navDivRight {
-  width: 50%;
-} */
