--- a/src/Components/Nav.module.css
+++ b/src/Components/Nav.module.css
@@ -22,7 +22,7 @@
     align-items: center;
     position: absolute;
     width: 100%;
-    background-color: rgba(35, 79, 111, 0.5);
+    background-color: hsla(205, 52%, 29%, 0.5);
   }
 
   .navDivLeft a {
