--- a/src/Components/Nav.module.css
+++ b/src/Components/Nav.module.css
@@ -23,7 +23,7 @@
 
 .nav {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     position: absolute;
     width: 100%;
@@ -34,19 +34,20 @@
   }
 
   .initials {
-    border: 3px solid white;
+    border: 2px solid white;
     color: white;
     border-radius: 4px;
     padding: .3rem;
-    font-size: 2.5vw;
+    font-size: 1rem;
     font-weight: 600;
-    height: 4vw;
-    width: 4vw;
+    height: 35px;
+    width: 35px;
     display: flex;
     align-items: center;
     justify-content: center;
     text-decoration: none;
-    margin: 1vw;
+    margin-top: 20px;
+    margin-left: 10px;
   }
 
   .initials:hover {
@@ -58,13 +59,15 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 75vw;
+    margin-top: 20px;
+    margin-right: 10px;
+    
   }
 
   .navTabs {
     display: flex;
     justify-content: center;
-    font-size: 2.2vw;
+    font-size: 1rem;
     align-items: center;
     width: 100%;
   }
@@ -73,37 +76,50 @@
     text-decoration: none;
     list-style: none;
     color: white;
-    margin: 0px 17px;
+    margin: 0px 7px;
     padding-bottom: 2px;
-    border-bottom: 2px solid white;
+    /* border-bottom: 1px solid white; */
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    display: inline-block;
+    background-image: linear-gradient(#ffffff 0 0);
+    background-position: 0 100%; /*OR bottom left*/
+    background-size: 0% 1px;
+    background-repeat: no-repeat;
+    transition:
+      background-size 0.3s,
+      background-position 0s 0.3s;
   }
 
   .navTabs a:hover {
-    border: 2px solid white;
+    /* border: 2px solid white;
     border-radius: 4px;
     margin: 15px;
     padding-bottom: 4px;
     padding-top: 4px;
-    margin-top: 11px;
+    margin-top: 11px; */
+    /* border-bottom: 1px solid white;
+    padding-bottom: 1px; */
+    background-position: 100% 100%;  
+    background-size: 100% 1px;
   }
 
   .navTabs a li {
     width: max-content;
-    margin-right: 1.5vw;
+    margin-right: 10px;
     margin-left: 10px;
   }
 
-  .dots {
-    border: 2px solid white;
+  /* .dots {
+    border: 1px solid white;
     width: 2px;
     height: 2px;
     border-radius: 4px;
     margin-right: 10px;
     background-color: white;
-  }
+  } */
 
   .navDivRight p {
     font-size: 1.8vw;
@@ -118,89 +134,24 @@
   position: absolute;
   top: 30%;
   left: 10%;
-  font-size: 4vw;
+  font-size: 3rem;
   color: white;
-  background-color: rgba(35, 79, 111, 0.5);
-  border: 3px solid white;
-  border-radius: 4px;
-  width: 28vw;
-  padding: 1%;
+  width: 300px;
 }
 
-.nameContainer {
-  /* width: 100vw; */
-  overflow: hidden;
-  position: absolute;
-  top: 66.7vh;
-}
-
-.nameInner {
-  white-space: nowrap;
-  display: flex;
-}
-
-.nameText {
-  display: flex;
-}
-
-.scrollingName {
-  color: white;
-  font-size: 10rem;
-  font-family: "Raleway", sans-serif;
-  font-weight: 300;
-}
-
-.nameInner div {
-  animation: scrollLeft 10s linear infinite;
-}
-
-.spacer {
-  padding: 0px 3vw;
-}
-
-@keyframes scrollLeft {
-  0% {
-      transform: translateX(0%);
-  }
-
-  100% {
-      transform: translateX(-100%);
-  }
-}
-
-/* .nameWrapper h1 {
-  display: inline-block;
-  color: white;
-  font-family: "Raleway", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 10rem;
-}
-
-@keyframes marquee {
-  0% {
-    transform: translateX(0%)
-  }
-  100% {
-    transform: translateX(-100%)
-  }
-} */
-
-.danny,
+/* .danny,
 .regan {
   margin: 0px;
   line-height: 80%;
-}
+} */
 
 .frontEnd {
-  font-size: 70%;
   font-weight: 100;
-  margin-top: 2vw;
 }
 
 .frontEnd span {
-  font-weight: 300;
+  font-family: "Raleway";
+  font-weight: 200;
 }
 
 .valueContainer {
@@ -254,6 +205,78 @@ button:hover {
   color: white;
   font-size: 1.5vw;
 }
+
+
+.nameContainer {
+  width: 120vw;
+  overflow: hidden;
+  position: absolute;
+  top: 66.7vh;
+}
+
+.nameInner {
+  white-space: nowrap;
+  display: flex;
+}
+
+.nameText {
+  display: flex;
+}
+
+.scrollingName {
+  color: white;
+  font-size: 13vw;
+  font-family: "Raleway", sans-serif;
+  font-weight: 300;
+}
+
+.nameInner div {
+  animation: scrollLeft 10s linear infinite;
+}
+
+.spacer {
+  padding: 0px 3vw;
+}
+
+@keyframes scrollLeft {
+  0% {
+      transform: translateX(0%);
+  }
+
+  100% {
+      transform: translateX(-100%);
+  }
+}
+
+@keyframes scrollRight {
+  0% {
+      transform: translateX(-100%);
+  }
+
+  100% {
+      transform: translateX(0%);
+  }
+}
+
+/* .nameWrapper h1 {
+  display: inline-block;
+  color: white;
+  font-family: "Raleway", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 10rem;
+}
+
+@keyframes marquee {
+  0% {
+    transform: translateX(0%)
+  }
+  100% {
+    transform: translateX(-100%)
+  }
+} */
+
 
 
 /* Menu Navigation Bars */
