front end developer section animation complete

--- a/src/Components/Nav.module.css
+++ b/src/Components/Nav.module.css
@@ -59,8 +59,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-top: 20px;
-    margin-right: 10px;
+    margin-top: 30px;
+    margin-right: 30px;
     
   }
 
@@ -132,26 +132,70 @@
 /* DANNY REGAN FRONT END SECTION */
 .dannyRegan {
   position: absolute;
-  top: 30%;
-  left: 10%;
-  font-size: 3rem;
+  top: 35%;
+  left: 7%;
+  font-size: 3vw;
   color: white;
-  width: 300px;
 }
 
-/* .danny,
-.regan {
-  margin: 0px;
-  line-height: 80%;
-} */
-
 .frontEnd {
+  font-family: "Raleway";
   font-weight: 100;
 }
 
-.frontEnd span {
+/* .frontEnd span {
   font-family: "Raleway";
   font-weight: 200;
+} */
+
+.qualitiesContent ol {
+  list-style: none;
+  --height: 3.5vw;
+  height: var(--height);
+  line-height: var(--height);
+  overflow: hidden;
+}
+
+.qualitiesContent ol li {
+  animation: slide-up 18s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes slide-up {
+  0%, 5% {
+    transform: translateY(0%);
+  }
+  /* 15%, 23% {
+    transform: translateY(-100%);
+  }
+  26%, 32% {
+    transform: translateY(-200%);
+  }
+  33%, 40% {
+    transform: translateY(-300%);
+  }
+  40%, 42% {
+    transform: translateY(-400%);
+  }
+  42%, 44% {
+    transform: translateY(-500%);
+  }
+  44%, 46% {
+    transform: translateY(-600%);
+  } */
+  30%, 100% {
+    transform: translateY(-1400%);
+  }
+}
+
+.qualitiesContent ol li span {
+  font-family: "Raleway";
+  font-weight: 300;
+  color: #ffffff;
+  transform: scale(1,2);
+  /* -webkit-text-fill-color: transparent;
+  background: linear-gradient(240deg, cyan, rgb(242, 0, 255));
+  -webkit-background-clip: text; */
 }
 
 .valueContainer {
@@ -257,26 +301,6 @@ button:hover {
       transform: translateX(0%);
   }
 }
-
-/* .nameWrapper h1 {
-  display: inline-block;
-  color: white;
-  font-family: "Raleway", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 10rem;
-}
-
-@keyframes marquee {
-  0% {
-    transform: translateX(0%)
-  }
-  100% {
-    transform: translateX(-100%)
-  }
-} */
-
 
 
 /* Menu Navigation Bars */
