--- a/src/Components/Scrollbar.module.css
+++ b/src/Components/Scrollbar.module.css
@@ -30,11 +30,11 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to top, #0073ff, #00ccff);
+    background: linear-gradient(to top, #0073ff, cyan);
     filter: blur(10px)
   }
   
-  .progressbar:after {
+  /* .progressbar:after {
     content: '';
     position: absolute;
     top: 0;
@@ -42,6 +42,6 @@
     width: 100%;
     height: 100%;
     background: linear-gradient(to top, #0073ff, #00ccff);
-    filter: blur(30px)
-  }
+    filter: blur(15px)
+  } */
   
