--- a/src/Components/Nav.module.css
+++ b/src/Components/Nav.module.css
@@ -1,5 +1,65 @@
 /* OVERALL IMAGE / BANNER CONTAINER */
 
+
+.loadIn {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  /* border-bottom-right-radius: 300px;
+  border-bottom-left-radius: 50%; */
+  background-color: rgb(16, 15, 19);
+  z-index: 5;
+  animation: loading 750ms ease-in 2.5s forwards;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.loadIn p {
+  font-size: 5rem;
+  color: white;
+  animation: textAppear 700ms ease-in 150ms backwards;
+}
+
+@keyframes textAppear {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes loading {
+  0% {
+    opacity: 1;
+    height: 100vh;
+    border-bottom-left-radius: 0vw;
+    /* border-bottom-right-radius: 0vw; */
+  }
+  50% {
+    border-bottom-left-radius: 50vw;
+    border-bottom-right-radius: 50vw;
+    transform: translateY(0%);
+  }
+  100% {
+    border-bottom-left-radius: 50vw;
+    border-bottom-right-radius: 50vw;
+    transform: translateY(-100%);
+  }
+}
+
+@keyframes webpageAppear {
+  from {
+    transform: translateY(400px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0%);
+    opacity: 1;
+  }
+}
+
 .bannerContainer {
   width: 100vw;
   min-height: 100vh;
@@ -26,11 +86,19 @@
     justify-content: space-between;
     align-items: center;
     position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
+    max-width: 100%;
+    animation: webpageAppear 700ms ease-out 2.5s;
   }
 
   .navDivLeft a {
     text-decoration: none;
+  }
+
+  .navDivLeft {
+    margin: 30px;
   }
 
   .initials {
@@ -46,8 +114,6 @@
     align-items: center;
     justify-content: center;
     text-decoration: none;
-    margin-top: 20px;
-    margin-left: 10px;
   }
 
   .initials:hover {
@@ -55,19 +121,17 @@
     cursor: pointer;
   }
 
-  .navDivCenter {
+  .navDivRight {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-top: 30px;
-    margin-right: 30px;
-    
+    margin: 30px;
   }
 
   .navTabs {
     display: flex;
     justify-content: center;
-    font-size: 1rem;
+    font-size: 1.1rem;
     align-items: center;
     width: 100%;
   }
@@ -76,14 +140,13 @@
     text-decoration: none;
     list-style: none;
     color: white;
-    margin: 0px 7px;
+    margin: 0px 9px;
     padding-bottom: 2px;
     /* border-bottom: 1px solid white; */
     display: flex;
     align-items: center;
     justify-content: space-between;
 
-    display: inline-block;
     background-image: linear-gradient(#ffffff 0 0);
     background-position: 0 100%; /*OR bottom left*/
     background-size: 0% 1px;
@@ -132,10 +195,11 @@
 /* DANNY REGAN FRONT END SECTION */
 .dannyRegan {
   position: absolute;
-  top: 35%;
+  top: 45%;
   left: 7%;
   font-size: 3vw;
   color: white;
+  animation: webpageAppear 800ms ease-out 2.5s;
 }
 
 .frontEnd {
@@ -157,8 +221,7 @@
 }
 
 .qualitiesContent ol li {
-  animation: slide-up 18s;
-  animation-fill-mode: forwards;
+  animation: slide-up 18s 4.25s forwards;
 }
 
 @keyframes slide-up {
@@ -242,20 +305,42 @@ button:hover {
   background-color: transparent;
 }
 
-.motto {
+.letsWork {
   position: absolute;
-  bottom: 5%;
-  right: 5%;
+  top: 45%;
+  right: 6%;
   color: white;
-  font-size: 1.5vw;
+  font-size: 2vw;
+  height: 2.7vw;
+  line-height: 3vw;
+  font-family: "Raleway";
+  background-image: linear-gradient(#ffffff 0 0);
+    background-position: 0 100%; /*OR bottom left*/
+    background-size: 0% 1px;
+    background-repeat: no-repeat;
+    transition:
+      background-size 0.3s,
+      background-position 0s 0.3s;
+  animation: webpageAppear 800ms ease-out 2.5s;
 }
 
+.letsWork p {
+  margin: 0px 15px;
+}
+
+.letsWork:hover {
+  cursor: pointer;
+  background-position: 100% 100%;  
+    background-size: 100% 1px;
+
+}
 
 .nameContainer {
   width: 120vw;
   overflow: hidden;
   position: absolute;
   top: 66.7vh;
+  animation: webpageAppear 700ms ease-out 2.5s;
 }
 
 .nameInner {
