--- a/src/Components/Footer.module.css
+++ b/src/Components/Footer.module.css
@@ -1,5 +1,5 @@
 .footerContainer {
-    background-color: rgba(35, 79, 111, 1);
+    background-color: #0e151a;
     height: 10vw;
     display: flex;
     flex-direction: column;
@@ -17,6 +17,7 @@
 ul {
     display: flex;
     justify-content: space-around;
+    align-items: center;
     width: 100%;
 }
 
