--- a/src/Components/Footer.module.css
+++ b/src/Components/Footer.module.css
@@ -1,6 +1,5 @@
 .footerContainer {
-    background-color: #0e151a;
-    height: 10vw;
+    background-color: hsl(205, 30%, 8%);
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -11,7 +10,9 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    width: 100%;
+    padding: 25px 0px 25px 0px;
+    border-top: 1px solid rgb(187, 187, 187);
+    width: 80vw;
 }
 
 ul {
@@ -35,4 +36,5 @@ li {
     color: white;
     font-size: .75rem;
     font-weight: 100;
+    padding-bottom: 25px;
 }
