updatted contact section styling

--- a/src/Components/Contact.module.css
+++ b/src/Components/Contact.module.css
@@ -1,55 +1,54 @@
-.container {
+.containerWrapper {
     background-color: hsl(205, 30%, 8%);
     color: white;
+    padding-top: 150px;
+    font-size: 1rem;
+    padding-left: 11%;
+    height: 100%;
+}
+
+.container {
+    width: 80vw;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    padding-top: 75px;
-    font-size: 1rem;
 }
 
 h2 {
     font-size: 3rem;
-    margin-left: 7%;
     padding-bottom: 25px;
     border-bottom: 1px solid rgb(187, 187, 187);
-    width: 80vw;
 }
 
 .myInfo {
     padding-top: 25px;
-    margin-left: 7%;
     border-bottom: 1px solid rgb(187, 187, 187);
-    width: 80vw;
+    height: 100%;
 }
 
 h3 {
     color: rgb(187, 187, 187);
     font-size: .8rem;
     text-transform: uppercase;
-    margin-left: 14%;
+    margin-left: 7%;
 }
 
 .container p {
     padding: 12px 0px 25px 0px;
-    margin-left: 14%;
+    margin-left: 7%;
 }
 
 .formContainer {
     padding-top: 25px;
-    margin-left: 11%;
-}
-
-form {
+    margin-left: 7%;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
 }
 
 .formTop {
     display: flex;
     justify-content: space-between;
-    width: 75%;
 }
 
 .formQuestion {
@@ -75,9 +74,8 @@ form {
 }
 
 .formQuestion input::placeholder {
-    color: rgb(187, 187, 187);
+    color: rgb(138, 138, 138);
     padding-left: 1px;
-
 }
 
 .formBottom {
