--- a/src/Components/Nav.module.css
+++ b/src/Components/Nav.module.css
@@ -7,7 +7,7 @@
   height: 100vh;
   /* border-bottom-right-radius: 300px;
   border-bottom-left-radius: 50%; */
-  background-color: rgb(16, 15, 19);
+  background-color: hsl(205, 30%, 8%);
   z-index: 5;
   animation: loading 750ms ease-in 2.5s forwards;
   display: flex;
@@ -91,6 +91,7 @@
     width: 100%;
     max-width: 100%;
     animation: webpageAppear 700ms ease-out 2.5s;
+    color: white;
   }
 
   .navDivLeft a {
@@ -114,10 +115,12 @@
     align-items: center;
     justify-content: center;
     text-decoration: none;
+    transition: 400ms;
   }
 
   .initials:hover {
-    background-color: rgba(35, 79, 111, 0.5);
+    background-color: hsl(205, 30%, 8%);
+    border-radius: 50%;
     cursor: pointer;
   }
 
@@ -157,14 +160,6 @@
   }
 
   .navTabs a:hover {
-    /* border: 2px solid white;
-    border-radius: 4px;
-    margin: 15px;
-    padding-bottom: 4px;
-    padding-top: 4px;
-    margin-top: 11px; */
-    /* border-bottom: 1px solid white;
-    padding-bottom: 1px; */
     background-position: 100% 100%;  
     background-size: 100% 1px;
   }
@@ -261,50 +256,6 @@
   -webkit-background-clip: text; */
 }
 
-.valueContainer {
-  position: absolute;
-  right: 7%;
-  top: 40%;
-  width: 15vw;
-  color: white;
-  background-color: rgba(35, 79, 111, 0.5);
-  padding: 2vw;
-  border: 3px solid white;
-  border-radius: 4px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.buttonsContainer {
-  padding-top: 3%;
-  display: flex;
-  justify-content: space-around;
-  width: auto;
-}
-
-
-.valueContainer p {
-  margin: 0px;
-  padding: .5vw;
-  font-size: 1vw;
-}
-
-button {
-  color: white;
-  background-color: rgba(250, 250, 250, .3);
-  border: 1px solid white;
-  border-radius: 4px;
-  width: 100%;
-  font-size: .85vw;
-  padding: .3vw;
-}
-
-button:hover {
-  cursor: pointer;
-  background-color: transparent;
-}
-
 .letsWork {
   position: absolute;
   top: 45%;
@@ -313,6 +264,7 @@ button:hover {
   font-size: 2vw;
   height: 2.7vw;
   line-height: 3vw;
+  padding-bottom: 5px;
   font-family: "Raleway";
   background-image: linear-gradient(#ffffff 0 0);
     background-position: 0 100%; /*OR bottom left*/
