--- a/src/Components/Scrollbar.module.css
+++ b/src/Components/Scrollbar.module.css
@@ -20,7 +20,7 @@
     width: 10px;
     /* height: 100%; */
     background: linear-gradient(to top, #0073ff, #00ccff);
-    border-radius: 10px;
+    /* border-radius: 10px; */
   }
   
   .progressbar:before {
@@ -30,8 +30,9 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to top, #0073ff, cyan);
-    filter: blur(10px)
+    background: linear-gradient(to top, rgb(187, 187, 187), white);
+    /* background: linear-gradient(to top, #0073ff, cyan); */
+    /* filter: blur(10px) */
   }
   
   /* .progressbar:after {
