--- a/src/Components/Footer.module.css
+++ b/src/Components/Footer.module.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    margin-bottom: 10px;
 }
 
 .ulContainer {
