--- a/src/Components/About.module.css
+++ b/src/Components/About.module.css
@@ -1,11 +1,52 @@
 .page {
-    height: 100vh;
+    height: auto;
+    min-height: 100% !important;
     color: white;
-    background-color: grey;
+    background-color: hsl(205, 30%, 8%);
+    display: block;
+    /* position: relative;
+    top: 200px; */
+}
+
+.filler {
+    height: 200px;
+}
+
+.topText {
+    width: 80%;
+    text-align: center;
+}
+
+.line {
+    height: 0px;
+    border: .5px solid white;
+    width: 90vw;
+    margin: 3vw 0px 3vw 0px;
 }
 
 .page h1 {
     text-align: center;
     position: relative;
-    top: 50%
+    font-size: 6vw;
+    padding-bottom: 3vw;
+}
+
+.content {
+    /* position: relative;
+    top: 200px; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: inherit;
+}
+
+.bannerPics {
+    width: 85vw;
+    padding: 3vw;
+}
+
+.mainPs {
+    width: 80vw;
+    padding: 3vw;
 }
