--- a/src/Components/About.module.css
+++ b/src/Components/About.module.css
@@ -4,8 +4,6 @@
     color: white;
     background-color: hsl(205, 30%, 8%);
     display: block;
-    /* position: relative;
-    top: 200px; */
 }
 
 .filler {
@@ -17,18 +15,12 @@
     text-align: center;
 }
 
-.line {
-    height: 0px;
-    border: .5px solid white;
-    width: 90vw;
-    margin: 3vw 0px 3vw 0px;
-}
-
 .page h1 {
     text-align: center;
     position: relative;
-    font-size: 6vw;
+    font-size: 4vw;
     padding-bottom: 3vw;
+    font-weight: 400;
 }
 
 .content {
@@ -44,9 +36,103 @@
 .bannerPics {
     width: 85vw;
     padding: 3vw;
+    margin-bottom: 5vh;
 }
 
-.mainPs {
-    width: 80vw;
-    padding: 3vw;
+/* .line {
+    height: 0px;
+    border: .5px solid white;
+    width: 90vw;
+    margin: 3vw 0px 3vw 0px;
+} */
+
+/* The About Me Informative Section */
+
+.aboutInfoContainer {
+    background-color: white;
+    color: hsl(205, 30%, 8%);
+}
+
+.me {
+    display: flex;
+    max-width: 100vw;
+    display: flex;
+    justify-content: space-evenly;
+    overflow-x: hidden;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+}
+
+.information {
+    position: relative;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.threePics {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: hsla(205, 30%, 8%, .95); /* Semi-transparent black overlay */
+    opacity: 0; /* Initially invisible */
+    transition: opacity 0.3s; /* Smooth transition effect */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+  }
+  
+  .mainPs {
+    color: white;
+    text-align: center;
+    opacity: 0; /* Initially invisible */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: opacity 1s;
+    width: 90%;
+    height: 90%;
+    z-index: 2;
+    font-size: 1.5vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .mainPs p {
+    font-size: 10rem;
+  }
+  
+  .information:hover .overlay {
+    opacity: 1; /* Show overlay on hover */
+  }
+  
+  .information:hover .mainPs {
+    opacity: .99; /* Show text on hover */
+  }
+
+.infoSection {
+    width: 30%;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.title {
+    border-bottom: none;
+    font-size: 5vw;
 }
