--- a/src/Components/Scrollbar.module.css
+++ b/src/Components/Scrollbar.module.css
@@ -46,3 +46,11 @@
     filter: blur(15px)
   } */
   
+  @media only screen and (max-width: 480px) {
+    .scrollPath {
+      display: none;
+    }
+    .progressbar {
+      display: none;
+    }
+  }
