--- a/src/Components/Contact.module.css
+++ b/src/Components/Contact.module.css
@@ -106,3 +106,9 @@ h3 {
     background-position: 100% 100%;  
     background-size: 100% 1px;
 }
+
+@media only screen and (max-width: 480px) {
+    .formTop {
+        flex-direction: column;
+    }
+}
