--- a/src/Components/Footer.module.css
+++ b/src/Components/Footer.module.css
@@ -5,13 +5,14 @@
     justify-content: space-evenly;
     align-items: center;
     margin-bottom: 10px;
+    margin-top: 10vh;
 }
 
 .ulContainer {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    padding: 50px 0px 50px 0px;
+    padding: 20px 0px 20px 0px;
     border-top: 1px solid rgb(187, 187, 187);
     width: 80vw;
 }
