--- a/src/Components/Nav.module.css
+++ b/src/Components/Nav.module.css
@@ -1,6 +1,5 @@
 /* OVERALL IMAGE / BANNER CONTAINER */
 
-
 .loadIn {
   position: absolute;
   width: 100vw;
@@ -378,5 +377,64 @@
 }
 
 
+@media only screen and (max-width: 480px) {
+  .bannerContainer {
+    max-width: 100vw;
+    max-height: 100vh; /* Set the height to the height of the viewport */
+    overflow-x: hidden;
+  }
+  .bannerImg {
+    height: 100vh;
+  }
+  .nav {
+    max-width: 100vw;
+    font-size: 10px;
+    justify-content: space-evenly;
+    margin-top: 15px;
+  }
+  .navTabs {
+    font-size: 15px;
 
-
+  }
+  .navDivLeft {
+    margin: 30px 1px;
+  }
+  .initials {
+    height: 30px;
+    width: 30px;
+    font-size: 15px;
+  }
+  .navDivRight {
+    margin: 1px;
+  }
+  .navTabs a {
+    margin: 0px 5px;
+  }
+  .navDivCenter {
+    display: none;
+  }
+  .dannyRegan {
+    top: 70%;
+    left: -2px;
+    font-size: 35px;
+    width: 100vw;
+    text-align: center;
+  }
+  .frontEnd {
+    display: flex;
+    justify-content: center;
+  }
+  .qualitiesContent ol {
+    height: 50px;
+    line-height: 50px;
+  }
+  .letsWork {
+    display: none;
+  }
+  .nameContainer {
+    top: 85vh;
+  }
+  .loadIn p {
+    text-align: center;
+  }
+}
