--- a/src/Components/Resume.module.css
+++ b/src/Components/Resume.module.css
@@ -2,7 +2,7 @@
     height: 160vh;
     min-height: fit-content;
     color: white;
-    background-color: grey;
+    background-color: hsl(205, 30%, 8%);
     display: flex;
     justify-content: center;
 }
@@ -18,4 +18,15 @@ embed {
     width: 80vw;
     height: 79%;
     top: 10%;
+}
+
+@media only screen and (max-width: 480px) {
+    .page {
+        height: 100vh;
+    }
+    embed {
+        top: 150px;
+        height: 60%;
+        width: 90vw;
+    }
 }
