--- a/src/Components/About.module.css
+++ b/src/Components/About.module.css
@@ -291,7 +291,7 @@
     }
     .bannerImgContainerMobile img {
         display: block;
-        margin-bottom: 400px;
+        margin-bottom: 200px;
         padding: 25px 0px 60px 0px;
     }
     .bannerImgContainer img {
@@ -300,7 +300,7 @@
     .bannerImgContainerMobile p {
         display: none;
     }
-    .scrollMobile {
+    /* .scrollMobile {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -312,9 +312,14 @@
     .scrollMobile p {
         padding: 10px;
         color: rgba(250, 250, 250, .3)
-    }
+    } */
     .page h1 {
         font-size: 25px;
-
+    }
+    .topText {
+        width: 90%;
+    }
+    .testimonialsSection {
+        height: 100vh;
     }
 }
