--- a/src/Components/About.module.css
+++ b/src/Components/About.module.css
@@ -113,7 +113,7 @@
     overflow-x: hidden;
     margin-top: 5vh;
     margin-bottom: 5vh;
-    height: 50vh;
+    min-height: 50vh;
 }
 
 .information {
