Add info, images, styling to portfolio section.

--- a/src/Components/Carousel.module.css
+++ b/src/Components/Carousel.module.css
@@ -4,7 +4,7 @@
 }
 
 .carousel img {
-    max-width: 100%; /* Ensure images don't exceed container width */
+    max-width: 100%;
 }
   
   .carousel img.hidden {
