--- a/src/Components/Portfolio.module.css
+++ b/src/Components/Portfolio.module.css
@@ -1,3 +1,11 @@
+a {
+    text-decoration: none;
+}
+
+.filler {
+    height: 200px;
+}
+
 .portfolioSection h1 {
     color: white;
     display: flex;
@@ -6,8 +14,9 @@
     height: 100vh;
 }
 
-/* .portfolioSection {
-    background-color: rgba(35, 79, 111, 1);
+.portfolioSection {
+    background: linear-gradient(180deg, hsla(187, 100%, 50%, 0.438) 0%, rgba(43,43,49,0) 60%);
+    /* background-color: hsl(205, 30%, 8%); */
     color: white;
 }
 
@@ -35,68 +44,106 @@
 }
 
 .featuredPorjectsHeader {
-
+    width: 90%;
+    text-align: center;
+    margin: 0;
 }
 
 .featuredProjectsHeader h3 {
     font-size: 3rem;
+    text-align: center;
+    position: relative;
+    font-weight: 400;
+    margin: 0;
+    text-transform: none;
+    color: white;
 }
 
 .project {
     height: 50vh;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     margin: 4% 0%;
     width: 70vw;
-
+    position: relative;
+    right: 30px;
+    transition: background-color 0.2s ease, transform 0.2s ease;
 }
 
 .imageContainer {
-    height: 22vw;
-    width: 22vw;
+    height: 35vw;
+    min-height: 300px;
+    width: 35vw;
+    min-width: 300px;
     overflow: hidden;
     border: 1px solid white;
-    border-radius: 4px;
+    border-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-right: 30px;
 }
 
 .image {
-    width: 90%;
-    height: 90%;
+    width: 80%;
+    height: 80%;
     border: 1px solid white;
     border-radius: 4px;
     overflow: hidden;
-    filter: saturate(40%);
+    transition: background-color 0.2s ease, transform 0.2s ease; /* Smooth interactions */
+
 }
 
-.image:hover {
+img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.project:hover {
     transform: scale(1.05);
     cursor: pointer;
     filter: saturate(100%);
 }
 
 .projectInfo {
-    height: 50%;
-    width: 40%;
+    height: 100%;
+    width: 50%;
     display: flex;
     flex-direction: column;
-    
 }
 
 .projectTitle {
     font-size: 2rem;
-    color: rgb(255, 223, 163);
+    color: white;
     margin-left: 2vw;
     padding: 10px;
+    position: relative;
+    width: fit-content;
+}
+
+h4 {
+    position: relative;
+    z-index: 1;
+    background: none;
+}
+
+.underline {
+    height: 40%;
+    width: auto;
+    background-color: rgb(114, 44, 255);
+    position: relative;
+    left: 15px;
+    bottom: 15px;
+    z-index: 0;
+    margin-bottom: 8px;
 }
 
 .projectDescription {
-    height: 100%;
+    height: fit-content;
     width: 100%;
-    background-color: hsla(205, 55%, 15%, 0.897);
+    background-color: hsla(240, 6%, 18%, 0.647);
     border-radius: 4px;
     color: white;
     padding: .75vw 1.1vw;
@@ -104,17 +151,20 @@
 
 .projectLanguages {
     display: flex;
-    justify-content: space-between;
-    width: 20%;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    width: 100%;
     padding: 10px;
 }
 
 .lang {
-    background-color: hsla(246, 20%, 19%, 0.647);
+    background-color: hsla(240, 6%, 18%, 0.647);
     border-radius: 10px;
     padding: 1px 8px;
+    margin-right: 5px;
+    margin-bottom: 4px;
     color: white;
-} */
+}
 
 @media only screen and (max-width: 480px) {
     h1 {
