--- a/src/Components/Carousel.module.css
+++ b/src/Components/Carousel.module.css
@@ -1,6 +1,6 @@
 .carousel {
     display: flex;
-    transition: transform 0.5s ease; /* Add transition for smooth animation */
+    transition: transform 0.5s ease; 
 }
 
 .carousel img {
