--- a/src/Components/Contact.module.css
+++ b/src/Components/Contact.module.css
@@ -94,7 +94,7 @@ h3 {
     padding-bottom: 5px;
     
     background-image: linear-gradient(#ffffff 0 0);
-    background-position: 0 100%; /*OR bottom left*/
+    background-position: 0 100%; 
     background-size: 0% 1px;
     background-repeat: no-repeat;
     transition:
