--- a/src/Components/Nav.module.css
+++ b/src/Components/Nav.module.css
@@ -4,8 +4,6 @@
   position: absolute;
   width: 100vw;
   height: 100vh;
-  /* border-bottom-right-radius: 300px;
-  border-bottom-left-radius: 50%; */
   background-color: hsl(205, 30%, 8%);
   z-index: 5;
   animation: loading 750ms ease-in 1.5s forwards;
@@ -144,13 +142,12 @@
     color: white;
     margin: 0px 9px;
     padding-bottom: 2px;
-    /* border-bottom: 1px solid white; */
     display: flex;
     align-items: center;
     justify-content: space-between;
 
     background-image: linear-gradient(#ffffff 0 0);
-    background-position: 0 100%; /*OR bottom left*/
+    background-position: 0 100%;
     background-size: 0% 1px;
     background-repeat: no-repeat;
     transition:
@@ -172,15 +169,6 @@
     margin-right: 10px;
     margin-left: 10px;
   }
-
-  /* .dots {
-    border: 1px solid white;
-    width: 2px;
-    height: 2px;
-    border-radius: 4px;
-    margin-right: 10px;
-    background-color: white;
-  } */
 
   .navDivRight p {
     font-size: 1.8vw;
@@ -205,11 +193,6 @@
   font-weight: 100;
 }
 
-/* .frontEnd span {
-  font-family: "Raleway";
-  font-weight: 200;
-} */
-
 .qualitiesContent ol {
   list-style: none;
   --height: 3.5vw;
@@ -219,31 +202,14 @@
 }
 
 .qualitiesContent ol li {
-  animation: slide-up 18s 3.25s forwards;
+  animation: slide-up 17s 2.5s forwards;
 }
 
 @keyframes slide-up {
   0%, 5% {
     transform: translateY(0%);
   }
-  /* 15%, 23% {
-    transform: translateY(-100%);
-  }
-  26%, 32% {
-    transform: translateY(-200%);
-  }
-  33%, 40% {
-    transform: translateY(-300%);
-  }
-  40%, 42% {
-    transform: translateY(-400%);
-  }
-  42%, 44% {
-    transform: translateY(-500%);
-  }
-  44%, 46% {
-    transform: translateY(-600%);
-  } */
+
   30%, 100% {
     transform: translateY(-1500%);
   }
@@ -254,9 +220,6 @@
   font-weight: 300;
   color: #ffffff;
   transform: scale(1,2);
-  /* -webkit-text-fill-color: transparent;
-  background: linear-gradient(240deg, cyan, rgb(242, 0, 255));
-  -webkit-background-clip: text; */
 }
 
 .letsWork {
@@ -284,7 +247,6 @@
 }
 
 .letsWork:hover {
-  cursor: pointer;
   background-position: 100% 100%;  
     background-size: 100% 1px;
 
@@ -380,7 +342,7 @@
 @media only screen and (max-width: 480px) {
   .bannerContainer {
     max-width: 100vw;
-    max-height: 100vh; /* Set the height to the height of the viewport */
+    max-height: 100vh; 
     overflow-x: hidden;
   }
   .bannerImg {
