--- a/src/Components/Footer.module.css
+++ b/src/Components/Footer.module.css
@@ -40,3 +40,20 @@ li {
     font-weight: 100;
     padding-bottom: 25px;
 }
+
+@media only screen and (max-width: 480px) {
+    .ulContainer {
+        justify-content: center;
+        gap: 15px;
+        width: 90vw;
+    }
+
+    .icon {
+        height: 10vw;
+    }
+
+    .footerContainer p {
+        font-size: 0.6rem;
+        text-align: center;
+    }
+}
