--- a/src/Components/Portfolio.module.css
+++ b/src/Components/Portfolio.module.css
@@ -113,7 +113,7 @@ img {
 }
 
 .projectTitle {
-    font-size: 2rem;
+    font-size: 2.5vw;
     color: white;
     margin-left: 2vw;
     padding: 10px;
@@ -128,12 +128,12 @@ h4 {
 }
 
 .underline {
-    height: 40%;
-    width: auto;
+    height: 20px;
+    width: 100%;
     background-color: rgb(114, 44, 255);
-    position: relative;
-    left: 15px;
-    bottom: 15px;
+    position: absolute;
+    left: 5%;
+    bottom: 0;
     z-index: 0;
     margin-bottom: 8px;
 }
@@ -173,13 +173,21 @@ h4 {
         padding: 0;
     }
 
+    .singleProject {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+
     h1 {
         text-align: center;
     }
 
     .project {
         min-height: 50vh;
-        width: 90vw;
+        max-width: 90vw;
         flex-direction: column-reverse;
         align-items: center;
         position: relative;
@@ -192,11 +200,20 @@ h4 {
         white-space: nowrap; 
         display: inline-block;
         overflow: visible;
+        margin: 0;
+    }
+
+    .projectTitle h4 {
+        font-size: 2rem;
+        align-items: center;
     }
 
     .projectInfo {
         width: 95vw;
         text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
     
     .imageContainer {
